src/driver/ajinextek/AXL(Library)/C, C++/AXDev.h


    //======================================================================================================== 

    //======== PCI-N804/N404 전용, Sequence Motion ===================================================================
    // Sequence Motion의 축 정보를 설정 합니다. (최소 1축)
    // lSeqMapNo : 축 번호 정보를 담는 Sequence Motion Index Point
    // lSeqMapSize : 축 번호 갯수
    // long* LSeqAxesNo : 축 번호 배열
    DWORD   __stdcall AxmSeqSetAxisMap(long lSeqMapNo, long lSeqMapSize, long* lSeqAxesNo);


    // Sequence Motion의 기준(Master) 축을 설정 합니다. 
    // 반드시 AxmSeqSetAxisMap(...) 에 설정된 축 내에서 설정하여야 합니다.
    DWORD   __stdcall AxmSeqSetMasterAxisNo(long lSeqMapNo, long lMasterAxisNo);


    // Sequence Motion의 각 Profile Node 정보를 라이브러리에 입력 합니다.
    // 만약 1축 Sequence Motion을 사용하더라도, *dPosition는 1개의 Array로 지정하여 주시기 바랍니다.
    DWORD   __stdcall AxmSeqAddNode(long lSeqMapNo, double* dPosition, double dVelocity, double dAcceleration, double dDeceleration, double dNextVelocity);


    // Sequence Motion이 구동 시 현재 실행 중인 Node Index를 알려 줍니다.
    DWORD   __stdcall AxmSeqGetNodeNum(long lSeqMapNo, long* lCurNodeNo);


    // Sequence Motion의 총 Node Count를 확인 합니다.
    DWORD   __stdcall AxmSeqGetTotalNodeNum(long lSeqMapNo, long* lTotalNodeCnt);


    // Sequence Motion이 현재 구동 중인지 확인 합니다.
    // dwInMotion : 0(구동 종료), 1(구동 중)
    DWORD   __stdcall AxmSeqIsMotion(long lSeqMapNo, DWORD* dwInMotion);


    // Sequence Motion의 Memory를 Clear 합니다.
    // AxmSeqSetAxisMap(...), AxmSeqSetMasterAxisNo(...) 에서 설정된 값은 유지됩니다.
    DWORD   __stdcall AxmSeqWriteClear(long lSeqMapNo);


    // Sequence Motion의 구동을 종료 합니다.
    // dwStopMode : 0(EMERGENCY_STOP), 1(SLOWDOWN_STOP) 
    DWORD   __stdcall AxmSeqStop(long lSeqMapNo, DWORD dwStopMode);

    //======================================================================================================== 


	//======== PCIe-Rxx04-SIIIH 전용 함수==========================================================================
	// (SIIIH, MR_J4_xxB, Para : 0 ~ 8) ==
	//     [0] : Command Position
	//     [1] : Actual Position
	//     [2] : Actual Velocity
	//     [3] : Mechanical Signal
	//     [4] : Regeneration load factor(%)
	//     [5] : Effective load factor(%)
	//     [6] : Peak load factor(%)
	//     [7] : Current Feedback
	//     [8] : Command Velocity
	DWORD	__stdcall AxmStatusSetMon(long lAxisNo, DWORD dwParaNo1, DWORD dwParaNo2, DWORD dwParaNo3, DWORD dwParaNo4, DWORD dwUse);

	DWORD	__stdcall AxmStatusGetMon(long lAxisNo, DWORD *dwpParaNo1, DWORD *dwpParaNo2, DWORD *dwpParaNo3, DWORD *dwpParaNo4, DWORD *dwpUse);

	DWORD	__stdcall AxmStatusReadMon(long lAxisNo, DWORD *dwpParaNo1, DWORD *dwpParaNo2, DWORD *dwpParaNo3, DWORD *dwpParaNo4, DWORD *dwDataVaild);

	DWORD	__stdcall AxmStatusReadMonEx(long lAxisNo, long *lpDataCnt, DWORD *dwpReadData);

	//=============================================================================================================
		
    //======== PCI-R32IOEV-RTEX 전용 함수=========================================================================== 
    // I/O 포트로 할당된 HPI register 를 읽고 쓰기위한 API 함수.
    // I/O Registers for HOST interface.
    // I/O 00h Host status register (HSR)
    // I/O 04h Host-to-DSP control register (HDCR)
    // I/O 08h DSP page register (DSPP)
    // I/O 0Ch Reserved
    DWORD   __stdcall AxlSetIoPort(long lBoardNo, DWORD dwAddr, DWORD dwData);

    DWORD   __stdcall AxlGetIoPort(long lBoardNo, DWORD dwAddr, DWORD* dwpData);


    //======== PCI-R3200-MLIII 전용 함수=========================================================================== 
/*
    // M-III Master 보드 펌웨어 업데이트 기본 정보 설정 함수
    DWORD   __stdcall AxlM3SetFWUpdateInit(long lBoardNo, DWORD dwTotalPacketSize);
    // M-III Master 보드 펌웨어 업데이트 기본 정보 설정 결과 확인 함수
    DWORD   __stdcall AxlM3GetFWUpdateInit(long lBoardNo, DWORD *dwTotalPacketSize);
    // M-III Master 보드 펌웨어 업데이트 자료 전달 함수
    DWORD   __stdcall AxlM3SetFWUpdateCopy(long lBoardNo, DWORD *lFWUpdataData, DWORD dwLength);
    // M-III Master 보드 펌웨어 업데이트 자료 전달 결과 확인 함수
    DWORD   __stdcall AxlM3GetFWUpdateCopy(long lBoardNo, BYTE bCrcData, DWORD *lFWUpdataResult);
    // M-III Master 보드 펌웨어 업데이트 실행
    DWORD   __stdcall AxlM3SetFWUpdate(long lBoardNo, DWORD dwSectorNo);
    // M-III Master 보드 펌웨어 업데이트 실행 결과 확인
    DWORD   __stdcall AxlM3GetFWUpdate(long lBoardNo, DWORD *dwSectorNo, DWORD *dwIsDone);
*/
    // M-III Master 보드 펌웨어 업데이트 기본 정보 설정 함수
    DWORD   __stdcall AxlM3SetFWUpdateInit(long lBoardNo, DWORD dwTotalPacketSize, DWORD dwProcTotalStepNo);

    // M-III Master 보드 펌웨어 업데이트 기본 정보 설정 결과 확인 함수
    DWORD   __stdcall AxlM3GetFWUpdateInit(long lBoardNo, DWORD *dwTotalPacketSize, DWORD *dwProcTotalStepNo);


    // M-III Master 보드 펌웨어 업데이트 자료 전달 함수
    DWORD   __stdcall AxlM3SetFWUpdateCopy(long lBoardNo, DWORD *pdwPacketData, DWORD dwPacketSize);

    // M-III Master 보드 펌웨어 업데이트 자료 전달 결과 확인 함수
    DWORD   __stdcall AxlM3GetFWUpdateCopy(long lBoardNo, DWORD *dwPacketSize);


    // M-III Master 보드 펌웨어 업데이트 실행
    DWORD   __stdcall AxlM3SetFWUpdate(long lBoardNo, DWORD dwFlashBurnStepNo);

    // M-III Master 보드 펌웨어 업데이트 실행 결과 확인
    DWORD   __stdcall AxlM3GetFWUpdate(long lBoardNo, DWORD *dwFlashBurnStepNo, DWORD *dwIsFlashBurnDone);


    // M-III Master 보드 EEPROM 데이터 설정 함수
    DWORD   __stdcall AxlM3SetCFGData(long lBoardNo, DWORD *pCmdData, DWORD CmdDataSize);

    // M-III Master 보드 EEPROM 데이터 가져오기 함수
    DWORD   __stdcall AxlM3GetCFGData(long lBoardNo, DWORD *pCmdData, DWORD CmdDataSize);


    // M-III Master 보드 CONNECT PARAMETER 기본 정보 설정 함수
    DWORD   __stdcall AxlM3SetMCParaUpdateInit(long lBoardNo, WORD wCh0Slaves, WORD wCh1Slaves, DWORD dwCh0CycTime, DWORD dwCh1CycTime, DWORD dwChInfoMaxRetry);

    // M-III Master 보드 CONNECT PARAMETER 기본 정보 설정 결과 확인 함수
    DWORD   __stdcall AxlM3GetMCParaUpdateInit(long lBoardNo, WORD *wCh0Slaves, WORD *wCh1Slaves, DWORD *dwCh0CycTime, DWORD *dwCh1CycTime, DWORD *dwChInfoMaxRetry);

    // M-III Master 보드 CONNECT PARAMETER 기본 정보 전달 함수
    DWORD   __stdcall AxlM3SetMCParaUpdateCopy(long lBoardNo, WORD wIdx, WORD wChannel, WORD wSlaveAddr, DWORD dwProtoCalType, DWORD dwTransBytes, DWORD dwDeviceCode);

    // M-III Master 보드 CONNECT PARAMETER 기본 정보 전달 결과 확인 함수
    DWORD   __stdcall AxlM3GetMCParaUpdateCopy(long lBoardNo, WORD wIdx, WORD *wChannel, WORD *wSlaveAddr, DWORD *dwProtoCalType, DWORD *dwTransBytes, DWORD *dwDeviceCode);


    // M-III Master 보드내에 레지스터를 DWord단위로 확인 함수
    DWORD   __stdcall AxlBoardReadDWord(long lBoardNo, WORD wOffset, DWORD *dwData);

    // M-III Master 보드내에 레지스터를 DWord단위로 설정 함수
    DWORD   __stdcall AxlBoardWriteDWord(long lBoardNo, WORD wOffset, DWORD dwData);


    // 보드내에 확장 레지스터를 DWord단위로 설정 및 확인한다.
    DWORD    __stdcall AxlBoardReadDWordEx(long lBoardNo, DWORD dwOffset, DWORD *dwData);

    DWORD    __stdcall AxlBoardWriteDWordEx(long lBoardNo, DWORD dwOffset, DWORD dwData);


    // 서보를 정지 모드로 설정 함수
    DWORD   __stdcall AxmM3ServoSetCtrlStopMode(long lAxisNo, BYTE bStopMode);

    // 서보를 Lt 선택 상태로 설정 함수
    DWORD   __stdcall AxmM3ServoSetCtrlLtSel(long lAxisNo, BYTE bLtSel1, BYTE bLtSel2);

    // 서보의 IO 입력 상태를 확인 함수
    DWORD   __stdcall AxmStatusReadServoCmdIOInput(long lAxisNo, DWORD *upStatus);
    
    // 서보의 보간 구동 함수
    DWORD   __stdcall AxmM3ServoExInterpolate(long lAxisNo, DWORD dwTPOS, DWORD dwVFF, DWORD dwTFF, DWORD dwTLIM, DWORD dwExSig1, DWORD dwExSig2);

    // 서보 엑츄레이터 바이어스 설정 함수
    DWORD   __stdcall AxmM3ServoSetExpoAccBias(long lAxisNo, WORD wBias);

    // 서보 엑츄레이터 시간 설정 함수
    DWORD   __stdcall AxmM3ServoSetExpoAccTime(long lAxisNo, WORD wTime);

    // 서보의 이동 시간을 설정 함수
    DWORD   __stdcall AxmM3ServoSetMoveAvrTime(long lAxisNo, WORD wTime);

    // 서보의 Acc 필터 설정 함수
    DWORD   __stdcall AxmM3ServoSetAccFilter(long lAxisNo, BYTE bAccFil);

    // 서보의 상태 모니터1 설정 함수
    DWORD   __stdcall AxmM3ServoSetCprmMonitor1(long lAxisNo, BYTE bMonSel);

    // 서보의 상태 모니터2 설정 함수
    DWORD   __stdcall AxmM3ServoSetCprmMonitor2(long lAxisNo, BYTE bMonSel);

    // 서보의 상태 모니터1 확인 함수
    DWORD   __stdcall AxmM3ServoStatusReadCprmMonitor1(long lAxisNo, DWORD *upStatus);

    // 서보의 상태 모니터2 확인 함수
    DWORD   __stdcall AxmM3ServoStatusReadCprmMonitor2(long lAxisNo, DWORD *upStatus);

    // 서보 엑츄레이터 Dec 설정 함수
    DWORD   __stdcall AxmM3ServoSetAccDec(long lAxisNo, WORD wAcc1, WORD wAcc2, WORD wAccSW, WORD wDec1, WORD wDec2, WORD wDecSW);

    // 서보 정지 설정 함수
    DWORD   __stdcall AxmM3ServoSetStop(long lAxisNo, long lMaxDecel);