src_old_backup/driver/ajinextek/AXL(Library)/Visual Basic(Net)/AXDev.vb


    ' Sequence Motion의 각 Profile Node 정보를 라이브러리에 입력 합니다.
    ' 만약 1축 Sequence Motion을 사용하더라도, *dPosition는 1개의 Array로 지정하여 주시기 바랍니다.
    Public Declare Function AxmSeqAddNode Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByRef dPosition As Double, ByVal dVelocity As Double, ByVal dAcceleration As Double, ByVal dDeceleration As Double, ByVal dNextVelocity As Double) As Integer

    ' Sequence Motion이 구동 시 현재 실행 중인 Node Index를 알려 줍니다.
    Public Declare Function AxmSeqGetNodeNum Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByRef lCurNodeNo As Integer) As Integer

    ' Sequence Motion의 총 Node Count를 확인 합니다.
    Public Declare Function AxmSeqGetTotalNodeNum Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByRef lTotalNodeCnt As Integer) As Integer

    ' Sequence Motion이 현재 구동 중인지 확인 합니다.
    ' dwInMotion : 0(구동 종료), 1(구동 중)
    Public Declare Function AxmSeqIsMotion Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByRef dwInMotion As Integer) As Integer

    ' Sequence Motion의 Memory를 Clear 합니다.
    ' AxmSeqSetAxisMap(...), AxmSeqSetMasterAxisNo(...) 에서 설정된 값은 유지됩니다.
    Public Declare Function AxmSeqWriteClear Lib "AXL.dll" (ByVal lSeqMapNo As Integer) As Integer

    ' Sequence Motion의 구동을 종료 합니다.
    ' dwStopMode : 0(EMERGENCY_STOP), 1(SLOWDOWN_STOP)
    Public Declare Function AxmSeqStop Lib "AXL.dll" (ByVal lSeqMapNo As Integer, ByVal dwStopMode As Integer) As Integer
    '========================================================================================================


    '======== PCIe-Rxx04-SIIIH 전용 함수==========================================================================
    ' (SIIIH, MR_J4_xxB, Para : 0 ~ 8) ==
    '     [0] : Command Position
    '     [1] : Actual Position
    '     [2] : Actual Velocity
    '     [3] : Mechanical Signal
    '     [4] : Regeneration load factor(%)
    '     [5] : Effective load factor(%)
    '     [6] : Peak load factor(%)
    '     [7] : Current Feedback
    '     [8] : Command Velocity
    Public Declare Function AxmStatusSetMon Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwParaNo1 As Integer, ByVal dwParaNo2 As Integer, ByVal dwParaNo3 As Integer, ByVal dwParaNo4 As Integer, ByVal dwUse As Integer) As Integer
    Public Declare Function AxmStatusGetMon Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwpParaNo1 As Integer, ByRef dwpParaNo2 As Integer, ByRef dwpParaNo3 As Integer, ByRef dwpParaNo4 As Integer, ByRef dwpUse As Integer) As Integer
    Public Declare Function AxmStatusReadMon Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwpParaNo1 As Integer, ByRef dwpParaNo2 As Integer, ByRef dwpParaNo3 As Integer, ByRef dwpParaNo4 As Integer, ByRef dwDataVaild As Integer) As Integer
    Public Declare Function AxmStatusReadMonEx Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef lpDataCnt As Integer, ByRef dwpReadData As Integer) As Integer
    '=============================================================================================================

    '======== PCI-R32IOEV-RTEX 전용 함수===========================================================================
    ' I/O 포트로 할당된 HPI register 를 읽고 쓰기위한 API 함수.
    ' I/O Registers for HOST interface.
    ' I/O 00h Host status register (HSR)
    ' I/O 04h Host-to-DSP control register (HDCR)
    ' I/O 08h DSP page register (DSPP)
    ' I/O 0Ch Reserved
    Public Declare Function AxlSetIoPort Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwAddr As Integer, ByVal dwData As Integer) As Integer
    Public Declare Function AxlGetIoPort Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwAddr As Integer, ByRef dwpData As Integer) As Integer

    '======== PCI-R3200-MLIII 전용 함수===========================================================================
    '/*
    ' M-III Master 보드 펌웨어 업데이트 기본 정보 설정 함수
    'DWORD   __stdcall AxlM3SetFWUpdateInit(long lBoardNo, DWORD dwTotalPacketSize);
    ' M-III Master 보드 펌웨어 업데이트 기본 정보 설정 결과 확인 함수
    'DWORD   __stdcall AxlM3GetFWUpdateInit(long lBoardNo, DWORD *dwTotalPacketSize);
    ' M-III Master 보드 펌웨어 업데이트 자료 전달 함수
    'DWORD   __stdcall AxlM3SetFWUpdateCopy(long lBoardNo, DWORD *lFWUpdataData, DWORD dwLength);
    ' M-III Master 보드 펌웨어 업데이트 자료 전달 결과 확인 함수
    'DWORD   __stdcall AxlM3GetFWUpdateCopy(long lBoardNo, BYTE bCrcData, DWORD *lFWUpdataResult);
    ' M-III Master 보드 펌웨어 업데이트 실행
    'DWORD   __stdcall AxlM3SetFWUpdate(long lBoardNo, DWORD dwSectorNo);
    ' M-III Master 보드 펌웨어 업데이트 실행 결과 확인
    'DWORD   __stdcall AxlM3GetFWUpdate(long lBoardNo, DWORD *dwSectorNo, DWORD *dwIsDone);
    '*/
    ' M-III Master 보드 펌웨어 업데이트 기본 정보 설정 함수
    Public Declare Function AxlM3SetFWUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwTotalPacketSize As Integer, ByVal dwProcTotalStepNo As Integer) As Integer
    ' M-III Master 보드 펌웨어 업데이트 기본 정보 설정 결과 확인 함수
    Public Declare Function AxlM3GetFWUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef dwTotalPacketSize As Integer, ByRef dwProcTotalStepNo As Integer) As Integer

    ' M-III Master 보드 펌웨어 업데이트 자료 전달 함수
    Public Declare Function AxlM3SetFWUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef pdwPacketData As Integer, ByVal dwPacketSize As Integer) As Integer
    ' M-III Master 보드 펌웨어 업데이트 자료 전달 결과 확인 함수
    Public Declare Function AxlM3GetFWUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef dwPacketSize As Integer) As Integer

    ' M-III Master 보드 펌웨어 업데이트 실행
    Public Declare Function AxlM3SetFWUpdate Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwFlashBurnStepNo As Integer) As Integer
    ' M-III Master 보드 펌웨어 업데이트 실행 결과 확인
    Public Declare Function AxlM3GetFWUpdate Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef dwFlashBurnStepNo As Integer, ByRef dwIsFlashBurnDone As Integer) As Integer

    ' M-III Master 보드 EEPROM 데이터 설정 함수
    Public Declare Function AxlM3SetCFGData Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef pCmdData As Integer, ByVal CmdDataSize As Integer) As Integer
    ' M-III Master 보드 EEPROM 데이터 가져오기 함수
    Public Declare Function AxlM3GetCFGData Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef pCmdData As Integer, ByVal CmdDataSize As Integer) As Integer

    ' M-III Master 보드 CONNECT PARAMETER 기본 정보 설정 함수
    Public Declare Function AxlM3SetMCParaUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wCh0Slaves As Integer, ByVal wCh1Slaves As Integer, ByVal dwCh0CycTime As Integer, ByVal dwCh1CycTime As Integer, ByVal dwChInfoMaxRetry As Integer) As Integer
    ' M-III Master 보드 CONNECT PARAMETER 기본 정보 설정 결과 확인 함수
    Public Declare Function AxlM3GetMCParaUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef wCh0Slaves As Integer, ByRef wCh1Slaves As Integer, ByRef dwCh0CycTime As Integer, ByRef dwCh1CycTime As Integer, ByRef dwChInfoMaxRetry As Integer) As Integer
    ' M-III Master 보드 CONNECT PARAMETER 기본 정보 전달 함수
    Public Declare Function AxlM3SetMCParaUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wIdx As Integer, ByVal wChannel As Integer, ByVal wSlaveAddr As Integer, ByVal dwProtoCalType As Integer, ByVal dwTransBytes As Integer, ByVal dwDeviceCode As Integer) As Integer
    ' M-III Master 보드 CONNECT PARAMETER 기본 정보 전달 결과 확인 함수
    Public Declare Function AxlM3GetMCParaUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wIdx As Integer, ByRef wChannel As Integer, ByRef wSlaveAddr As Integer, ByRef dwProtoCalType As Integer, ByRef dwTransBytes As Integer, ByRef dwDeviceCode As Integer) As Integer

    ' M-III Master 보드내에 레지스터를 DWord단위로 확인 함수
    Public Declare Function AxlBoardReadDWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByRef dwData As Integer) As Integer
    ' M-III Master 보드내에 레지스터를 DWord단위로 설정 함수
    Public Declare Function AxlBoardWriteDWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByVal dwData As Integer) As Integer

    ' 보드내에 확장 레지스터를 DWord단위로 설정 및 확인한다.
    Public Declare Function AxlBoardReadDWordEx Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwOffset As Integer, ByRef dwData As Integer) As Integer
    Public Declare Function AxlBoardWriteDWordEx Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwOffset As Integer, ByVal dwData As Integer) As Integer

    ' 서보를 정지 모드로 설정 함수
    Public Declare Function AxmM3ServoSetCtrlStopMode Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal bStopMode As Byte) As Integer
    ' 서보를 Lt 선택 상태로 설정 함수
    Public Declare Function AxmM3ServoSetCtrlLtSel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal bLtSel1 As Byte, ByVal bLtSel2 As Byte) As Integer
    ' 서보의 IO 입력 상태를 확인 함수
    Public Declare Function AxmStatusReadServoCmdIOInput Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upStatus As Integer) As Integer
    ' 서보의 보간 구동 함수
    Public Declare Function AxmM3ServoExInterpolate Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwTPOS As Integer, ByVal dwVFF As Integer, ByVal dwTFF As Integer, ByVal dwTLIM As Integer, ByVal dwExSig1 As Integer, ByVal dwExSig2 As Integer) As Integer
    ' 서보 엑츄레이터 바이어스 설정 함수
    Public Declare Function AxmM3ServoSetExpoAccBias Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wBias As Integer) As Integer
    ' 서보 엑츄레이터 시간 설정 함수
    Public Declare Function AxmM3ServoSetExpoAccTime Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wTime As Integer) As Integer
    ' 서보의 이동 시간을 설정 함수
    Public Declare Function AxmM3ServoSetMoveAvrTime Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wTime As Integer) As Integer
    ' 서보의 Acc 필터 설정 함수
    Public Declare Function AxmM3ServoSetAccFilter Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal bAccFil As Byte) As Integer
    ' 서보의 상태 모니터1 설정 함수
    Public Declare Function AxmM3ServoSetCprmMonitor1 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal bMonSel As Byte) As Integer
    ' 서보의 상태 모니터2 설정 함수
    Public Declare Function AxmM3ServoSetCprmMonitor2 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal bMonSel As Byte) As Integer
    ' 서보의 상태 모니터1 확인 함수
    Public Declare Function AxmM3ServoStatusReadCprmMonitor1 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upStatus As Integer) As Integer
    ' 서보의 상태 모니터2 확인 함수
    Public Declare Function AxmM3ServoStatusReadCprmMonitor2 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upStatus As Integer) As Integer
    ' 서보 엑츄레이터 Dec 설정 함수
    Public Declare Function AxmM3ServoSetAccDec Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wAcc1 As Integer, ByVal wAcc2 As Integer, ByVal wAccSW As Integer, ByVal wDec1 As Integer, ByVal wDec2 As Integer, ByVal wDecSW As Integer) As Integer
    ' 서보 정지 설정 함수
    Public Declare Function AxmM3ServoSetStop Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal lMaxDecel As Integer) As Integer
